--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>me.FurH</groupId>
     <artifactId>FCoreLib</artifactId>
-    <version>0.7.29</version>
+    <version>0.7.30-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>FCoreLib</name>
