--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     </properties>
   
     <repositories>
+    	<!--
         <repository>
             <id>releases</id>
             <url>http://localhost:8081/nexus/content/repositories/releases</url>
@@ -24,26 +25,30 @@
             <url>https://dl.dropboxusercontent.com/u/55730138/sonatype-work/releases</url>
         </repository>
         <repository>
-            <id>bukkit-snapshots</id>
-            <url>http://repo.bukkit.org/content/repositories/snapshots/</url>
-        </repository>
-        <repository>
             <id>bukkit-repo</id>
             <url>http://repo.bukkit.org/content/groups/public</url>
         </repository>
+        -->
+        <repository>
+			<id>vault-repo</id>
+			<url>http://nexus.theyeticave.net/content/repositories/pub_releases</url>
+		</repository>
+        <repository>
+            <id>bukkit-snapshots</id>
+            <url>http://repo.bukkit.org/content/repositories/snapshots/</url>
+        </repository>
     </repositories>
-
     <dependencies>
         <dependency>
             <groupId>net.milkbowl.vault</groupId>
             <artifactId>Vault</artifactId>
-            <version>1.2.23</version>
+            <version>1.2.32</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.7.2-R0.3-SNAPSHOT</version>
+            <version>1.7.5-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
@@ -80,8 +85,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.4</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.7</source>
+                    <target>1.7</target>
                     <showWarnings>true</showWarnings>
                     <showDeprecation>true</showDeprecation>
                 </configuration>
